# AxiomGuard

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  axiom_studio.py  axiomguard_studio_core.py  demo_app.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
api-reference/: index.html
axiomguard/: __init__.py  core.py  correction.py  document_parser.py  integration.py  knowledge_base.py  models.py  parser.py  resolver.py  rule_generator.py  staleness.py  tournament.py  z3_engine.py
axiomguard/backends/: __init__.py  anthropic_llm.py  generic_http_llm.py  openai_llm.py
axiomguard/integrations/: __init__.py  chroma.py  langchain.py  llamaindex.py  qdrant.py
axiomguard/studio/: __init__.py  api.py  app.py  core.py
axiomguard/studio/static/: index.html
changelog/: index.html
contributing/: index.html
docs/: ROADMAP.md  architecture_philosophy.md
docs/research/: 00-architecture-vision.md  00-hybrid-architecture.md  v020_extraction_logic.md  v030_axiom_library_format.md  v040_scaling_strategy.md  v050_self_correction_strategy.md  v060_negation_temporal.md  v070_advanced_rules_ecosystem.md  v070_tournament_rule_derivation.md
docs/site/: api-reference.md  changelog.md  contributing.md  examples.md  index.md  roadmap.md
docs/site/getting-started/: api-keys.md  installation.md  quickstart.md
docs/site/guides/: ai-generated-rules.md  architecture-philosophy.md  llm-backends.md  programmatic-rules.md  self-correction.md  yaml-rules.md
examples/: basic_usage.py  document_to_rules_demo.py  ehr_medication_policy.axiom.yml  ehr_medication_system.py  epic_demo.py  epic_demo_medical.py  index.html  loan_approval_demo.py  loan_rules.axiom.yml  medical_bot_guard.py  medical_rules.axiom.yml  medical_strict_rules.axiom.yml  real_llm_usage.py  rover_edge_system.py  rover_safety_policy.axiom.yml  strict_rules.axiom.yml
getting-started/api-keys/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/ai-generated-rules/: index.html
guides/architecture-philosophy/: index.html
guides/llm-backends/: index.html
guides/programmatic-rules/: index.html
guides/self-correction/: index.html
guides/yaml-rules/: index.html
roadmap/: index.html
search/: search_index.json
tests/: poc_hybrid_retrieval.py  test_rule_generator.py  test_studio_api.py  test_temporal.py  test_tournament.py  test_v020_integration.py  test_v030_full_pipeline.py  test_v030_parser.py  test_v040_scaling.py  test_v050_core_loop.py  test_v050_correction.py  test_v060_block_structured.py  test_v060_confidence_norm.py  test_v060_negation_bias.py  test_v063_hardening.py  test_v070_advanced_rules.py  test_v070_axiom_studio.py  test_v070_chains.py  test_v070_langchain.py  test_v070_llamaindex.py  test_v072_document_ingestion.py  test_z3_engine.py
tests/fixtures/: medical.axiom.yml
