[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiomguard"
version = "0.7.0"
description = "Deterministic Neuro-Symbolic Guardrails for Enterprise AI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "witchwasin", email = "witchwasin@gmail.com" },
]
keywords = [
    "ai",
    "hallucination",
    "llm",
    "rag",
    "neuro-symbolic",
    "formal-verification",
    "z3",
    "theorem-prover",
    "smt-solver",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "z3-solver>=4.12.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39.0"]
openai = ["openai>=1.0.0"]
chroma = ["chromadb>=0.4.0"]
qdrant = ["qdrant-client>=1.7.0"]
langchain = ["langchain-core>=0.3.0"]
llamaindex = ["llama-index-core>=0.11.0"]
studio = ["streamlit>=1.30.0"]
all = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "qdrant-client>=1.7.0",
    "langchain-core>=0.3.0",
    "llama-index-core>=0.11.0",
    "streamlit>=1.30.0",
]

[project.urls]
Homepage = "https://github.com/witchwasin/AxiomGuard"
Repository = "https://github.com/witchwasin/AxiomGuard"
Issues = "https://github.com/witchwasin/AxiomGuard/issues"

[tool.setuptools.packages.find]
include = ["axiomguard*"]

[tool.setuptools.package-data]
axiomguard = ["py.typed"]
